--- a/agentcss.css
+++ b/agentcss.css
@@ -10,6 +10,15 @@
 .navbar-brand{
 	color: black;
 }
+.navbar-toggler{
+	border-color: tomato;
+	
+	color: white;
+}
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
 hr{
 	  border-top: 1px solid red;
 }
@@ -142,11 +151,7 @@ hr{
 
 
 
-#email {
-    color: white;
-    position: relative;
-    
-}
+
 
 .footer button{
   
@@ -167,6 +172,9 @@ hr{
 
      
 
+ }
+  .footer p{
+ 	font-size: 12px;
  }
 
  .footer h2{
