--- a/rentcss.css
+++ b/rentcss.css
@@ -10,6 +10,15 @@
 .navbar-brand{
 	color: black;
 }
+.navbar-toggler{
+	border-color: tomato;
+	
+	color: white;
+}
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
 hr{
 	  border-top: 1px solid red;
 }
@@ -88,7 +97,9 @@ h1 {
 }
 
 
-
+.foot img{
+	filter: brightness(0.60);
+}
 
 
 
@@ -201,6 +212,9 @@ visibility: visible;
 
      
 
+ }
+ .footer p{
+ 	font-size: 12px;
  }
 
  .footer h2{
